--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
           <div id="search-option-container">
             <form id="search">
               <i id="globe" class="fa-solid fa-globe"></i>
-              <input type="text" id="search-input" autocomplete="off" />
+              <input
+                type="text"
+                id="search-input"
+                placeholder="Search for a city"
+                autocomplete="off"
+              />
               <button
                 type="submit"
                 id="magnify"
