--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
     ></script>
   </head>
   <body>
-    <div id="container">
-      <div id="shade-img">
-        <div id="search-options">
-          <div id="search-option-container">
-            <form id="search">
-              <i id="globe" class="fa-solid fa-globe"></i>
-              <input
-                type="text"
-                id="search-input"
-                placeholder="Search for a city"
-                autocomplete="off"
-              />
-              <button
-                type="submit"
-                id="magnify"
-                class="fa-solid fa-magnifying-glass"
-              ></button>
-            </form>
-            <div id="option"></div>
+    <div id="bodyShade">
+      <div id="container">
+        <div id="shade-img">
+          <div id="search-options">
+            <div id="search-option-container">
+              <form id="search">
+                <i id="globe" class="fa-solid fa-globe"></i>
+                <input
+                  type="text"
+                  id="search-input"
+                  placeholder="Search for a city"
+                  autocomplete="off"
+                />
+                <button
+                  type="submit"
+                  id="magnify"
+                  class="fa-solid fa-magnifying-glass"
+                ></button>
+              </form>
+              <div id="option"></div>
+            </div>
           </div>
-        </div>
-        <div id="content">
-          <!-- <div id="temp-desc">
+          <div id="content">
+            <!-- <div id="temp-desc">
             <div id="temp-info">
               <p id="temp">34<span>°</span></p>
               <p id="desc">
@@ -91,10 +92,10 @@
               <p id="day_date">Jan 8</p>
             </div>
           </div> -->
+          </div>
         </div>
       </div>
     </div>
-
     <script src="./script.js"></script>
   </body>
 </html>
